[Editorial] Modernize hyphenation and spelling

--- a/src/epub/text/prelude.xhtml
+++ b/src/epub/text/prelude.xhtml
@@ -23,7 +23,7 @@
 			<p>“You spoke of children,” I said. “Have you more than Carthoris?”</p>
 			<p>“A daughter,” he replied, “only a little younger than Carthoris, and, barring one, the fairest thing that ever breathed the thin air of dying Mars. Only Dejah Thoris, her mother, could be more beautiful than Tara of Helium.”</p>
 			<p>For a moment he fingered the chessmen idly. “We have a game on Mars similar to chess,” he said, “very similar. And there is a race there that plays it grimly with men and naked swords. We call the game <i xml:lang="x-mars">jetan</i>. It is played on a board like yours, except that there are a hundred squares and we use twenty pieces on each side. I never see it played without thinking of Tara of Helium and what befell her among the chessmen of Barsoom. Would you like to hear her story?”</p>
-			<p>I said that I would and so he told it to me, and now I shall try to re-tell it for you as nearly in the words of The Warlord of Mars as I can recall them, but in the third person. If there be inconsistencies and errors, let the blame fall not upon John Carter, but rather upon my faulty memory, where it belongs. It is a strange tale and utterly Barsoomian.</p>
+			<p>I said that I would and so he told it to me, and now I shall try to retell it for you as nearly in the words of The Warlord of Mars as I can recall them, but in the third person. If there be inconsistencies and errors, let the blame fall not upon John Carter, but rather upon my faulty memory, where it belongs. It is a strange tale and utterly Barsoomian.</p>
 		</section>
 	</body>
 </html>
