--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -13,7 +13,7 @@
 					<p>I have used the word king in describing the rulers or chiefs of the Bantoomian swarms, since the word itself is unpronounceable in English, nor does <i xml:lang="x-mars">jed</i> or jeddak of the red Martian tongue have quite the same meaning as the Bantoomian word, which has practically the same significance as the English word queen as applied to the leader of a swarm of bees. <cite>⁠—<abbr class="name">J. C.</abbr></cite> <a href="chapter-8.xhtml#noteref-1" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-2" epub:type="endnote">
-					<p>Soldier of Fortune; free-lance warrior. <a href="chapter-8.xhtml#noteref-2" epub:type="backlink">↩</a></p>
+					<p>Soldier of Fortune; freelance warrior. <a href="chapter-8.xhtml#noteref-2" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-3" epub:type="endnote">
 					<p>Approximately 814 Earth Miles. <a href="chapter-11.xhtml#noteref-3" epub:type="backlink">↩</a></p>
