--- a/src/epub/text/appendix.xhtml
+++ b/src/epub/text/appendix.xhtml
@@ -10,22 +10,22 @@
 			<h2 epub:type="label">Jetan, or Martian Chess</h2>
 			<p>For those who care for such things, and would like to try the game, I give the rules of Jetan as they were given me by John Carter. By writing the names and moves of the various pieces on bits of paper and pasting them on ordinary checkermen the game may be played quite as well as with the ornate pieces used upon Mars.</p>
 			<hr/>
-			<p><em><b>The Board</b></em>: Square board consisting of one hundred alternate black and orange squares.</p>
-			<p><em><b>The Pieces</b></em>: In order, as they stand upon the board in the first row, from left to right of each player.</p>
-			<p><em>Warrior</em>: two feathers; two spaces straight in any direction or combination.</p>
-			<p><em xml:lang="x-mars">Padwar</em>: two feathers; two spaces diagonal in any direction or combination.</p>
-			<p><em xml:lang="x-mars">Dwar</em>: three feathers; three spaces straight in any direction or combination.</p>
-			<p><em>Flier</em>: three bladed propellor; three spaces diagonal in any direction or combination; and may jump intervening pieces.</p>
-			<p><em>Chief</em>: Diadem with ten jewels; three spaces in any direction; straight or diagonal or combination.</p>
-			<p><em>Princess</em>: Diadem with one jewel; same as Chief, except may jump intervening pieces.</p>
-			<p><em>Flier</em>: See above.</p>
-			<p><em xml:lang="x-mars">Dwar</em>: See above.</p>
-			<p><em xml:lang="x-mars">Padwar</em>: See above.</p>
-			<p><em>Warrior</em>: See above.</p>
+			<p><i><b>The Board</b></i>: Square board consisting of one hundred alternate black and orange squares.</p>
+			<p><i><b>The Pieces</b></i>: In order, as they stand upon the board in the first row, from left to right of each player.</p>
+			<p><i>Warrior</i>: two feathers; two spaces straight in any direction or combination.</p>
+			<p><i xml:lang="x-mars">Padwar</i>: two feathers; two spaces diagonal in any direction or combination.</p>
+			<p><i xml:lang="x-mars">Dwar</i>: three feathers; three spaces straight in any direction or combination.</p>
+			<p><i>Flier</i>: three bladed propellor; three spaces diagonal in any direction or combination; and may jump intervening pieces.</p>
+			<p><i>Chief</i>: Diadem with ten jewels; three spaces in any direction; straight or diagonal or combination.</p>
+			<p><i>Princess</i>: Diadem with one jewel; same as Chief, except may jump intervening pieces.</p>
+			<p><i>Flier</i>: See above.</p>
+			<p><i xml:lang="x-mars">Dwar</i>: See above.</p>
+			<p><i xml:lang="x-mars">Padwar</i>: See above.</p>
+			<p><i>Warrior</i>: See above.</p>
 			<p>And in the second row from left to right:</p>
-			<p><em>Thoat</em>: Mounted warrior two feathers; two spaces, one straight and one diagonal in any direction.</p>
-			<p><em>Panthans</em>: (Eight of them): one feather; one space, forward, side, or diagonal, but not backward.</p>
-			<p><em>Thoat</em>: See above.</p>
+			<p><i>Thoat</i>: Mounted warrior two feathers; two spaces, one straight and one diagonal in any direction.</p>
+			<p><i>Panthans</i>: (Eight of them): one feather; one space, forward, side, or diagonal, but not backward.</p>
+			<p><i>Thoat</i>: See above.</p>
 			<p>The game is played with twenty black pieces by one player and twenty orange by his opponent, and is presumed to have originally represented a battle between the Black race of the south and the Yellow race of the north. On Mars the board is usually arranged so that the Black pieces are played from the south and the Orange from the north.</p>
 			<p>The game is won when any piece is placed on same square with opponent’s Princess, or a Chief takes a Chief.</p>
 			<p>The game is drawn when either Chief is taken by a piece other than the opposing Chief, or when both sides are reduced to three pieces, or less, of equal value and the game is not won in the ensuing ten moves, five apiece.</p>
