Corrected appendix title

--- a/src/epub/text/appendix.xhtml
+++ b/src/epub/text/appendix.xhtml
@@ -7,7 +7,7 @@
 	</head>
 	<body epub:type="backmatter z3998:fiction">
 		<section id="appendix" epub:type="appendix">
-			<h2 epub:type="label">Jetan, or Martian Chess</h2>
+			<h2 epub:type="title">Jetan, or Martian Chess</h2>
 			<p>For those who care for such things, and would like to try the game, I give the rules of Jetan as they were given me by John Carter. By writing the names and moves of the various pieces on bits of paper and pasting them on ordinary checkermen the game may be played quite as well as with the ornate pieces used upon Mars.</p>
 			<hr/>
 			<p><i><b>The Board</b></i>: Square board consisting of one hundred alternate black and orange squares.</p>
