--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -12,22 +12,23 @@
 				<img alt="The Standard Ebooks logo" src="../images/logo.svg" epub:type="z3998:publisher-logo se:color-depth.black-on-transparent"/>
 			</header>
 			<p><i epub:type="se:name.publication.book">The Chessmen of Mars</i><br/>
-			was published in YEAR by<br/>
+			was published in 1922 by<br/>
 			<a href="https://en.wikipedia.org/wiki/Edgar_Rice_Burroughs">Edgar Rice Burroughs</a>.</p>
 			<p>This ebook was produced for the<br/>
 			<a href="https://standardebooks.org">Standard Ebooks project</a><br/>
 			by<br/>
-			<a href="PRODUCER_URL">PRODUCER</a>,<br/>
+			An Anonymous Volunteer,<br/>
 			and is based on a transcription produced in 1998 by<br/>
 			<b class="name">Judy Boss</b><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/1153">Project Gutenberg</a><br/>
 			and on digital scans available at the<br/>
-			<a href="IA_URL">Internet Archive</a>.</p>
+			<a href="https://archive.org/details/chessmenofmars00burr_2">Internet Archive</a><br/>
+			and <a href="https://www.google.com/books/edition/The_Chessmen_of_Mars/BMNDAQAAMAAJ">Google Books</a>.</p>
 			<p>The cover page is adapted from<br/>
-			<i epub:type="se:name.visual-art.painting">PAINTING</i>,<br/>
-			a painting completed in YEAR by<br/>
-			<a href="ARTIST_WIKI_URL">ARTIST</a>.<br/>
+			<i epub:type="se:name.visual-art.painting">The Chessmen of Mars</i>,<br/>
+			a painting completed in 1922 by<br/>
+			<a href="ARTIST_WIKI_URL">J. Allen St. John</a>.<br/>
 			The cover and title pages feature the<br/>
 			<b epub:type="se:name.visual-art.typeface">League Spartan</b> and <b epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</b><br/>
 			typefaces created in 2014 and 2009 by<br/>
