Proofreading, addtional xml-lang elements

--- a/src/epub/text/appendix.xhtml
+++ b/src/epub/text/appendix.xhtml
@@ -7,8 +7,8 @@
 	</head>
 	<body epub:type="backmatter z3998:fiction">
 		<section id="appendix" epub:type="appendix">
-			<h2 epub:type="title">Jetan, or Martian Chess</h2>
-			<p>For those who care for such things, and would like to try the game, I give the rules of Jetan as they were given me by John Carter. By writing the names and moves of the various pieces on bits of paper and pasting them on ordinary checkermen the game may be played quite as well as with the ornate pieces used upon Mars.</p>
+			<h2 epub:type="title"><span xml:lang="x-mars">Jetan</span>, or Martian Chess</h2>
+			<p>For those who care for such things, and would like to try the game, I give the rules of <i xml:lang="x-mars">Jetan</i> as they were given me by John Carter. By writing the names and moves of the various pieces on bits of paper and pasting them on ordinary checkermen the game may be played quite as well as with the ornate pieces used upon Mars.</p>
 			<hr/>
 			<p><i><b>The Board</b></i>: Square board consisting of one hundred alternate black and orange squares.</p>
 			<p><i><b>The Pieces</b></i>: In order, as they stand upon the board in the first row, from left to right of each player.</p>
@@ -23,9 +23,9 @@
 			<p><i xml:lang="x-mars">Padwar</i>: See above.</p>
 			<p><i>Warrior</i>: See above.</p>
 			<p>And in the second row from left to right:</p>
-			<p><i>Thoat</i>: Mounted warrior two feathers; two spaces, one straight and one diagonal in any direction.</p>
-			<p><i>Panthans</i>: (Eight of them): one feather; one space, forward, side, or diagonal, but not backward.</p>
-			<p><i>Thoat</i>: See above.</p>
+			<p><i xml:lang="x-mars">Thoat</i>: Mounted warrior two feathers; two spaces, one straight and one diagonal in any direction.</p>
+			<p><i xml:lang="x-mars">Panthans</i>: (Eight of them): one feather; one space, forward, side, or diagonal, but not backward.</p>
+			<p><i xml:lang="x-mars">Thoat</i>: See above.</p>
 			<p>The game is played with twenty black pieces by one player and twenty orange by his opponent, and is presumed to have originally represented a battle between the Black race of the south and the Yellow race of the north. On Mars the board is usually arranged so that the Black pieces are played from the south and the Orange from the north.</p>
 			<p>The game is won when any piece is placed on same square with opponent’s Princess, or a Chief takes a Chief.</p>
 			<p>The game is drawn when either Chief is taken by a piece other than the opposing Chief, or when both sides are reduced to three pieces, or less, of equal value and the game is not won in the ensuing ten moves, five apiece.</p>
@@ -34,7 +34,7 @@
 			<p>When a player, moving properly and in order, places one of his pieces upon a square occupied by an opponent piece, the opponent piece is considered to have been killed and is removed from the game.</p>
 			<p>The moves explained. Straight moves mean due north, south, east, or west; diagonal moves mean northeast, southeast, southwest, or northwest. A <i xml:lang="x-mars">Dwar</i> might move straight north three spaces, or north one space and east two spaces, or any similar combination of straight moves, so long as he did not cross the same square twice in a single move. This example explains combination moves.</p>
 			<p>The first move may be decided in any way that is agreeable to both players; after the first game the winner of the preceding game moves first if he chooses, or may instruct his opponent to make the first move.</p>
-			<p>Gambling: The Martians gamble at Jetan in several ways. Of course the outcome of the game indicates to whom the main stake belongs; but they also put a price upon the head of each piece, according to its value, and for each piece that a player loses he pays its value to his opponent.</p>
+			<p>Gambling: The Martians gamble at <i xml:lang="x-mars">Jetan</i> in several ways. Of course the outcome of the game indicates to whom the main stake belongs; but they also put a price upon the head of each piece, according to its value, and for each piece that a player loses he pays its value to his opponent.</p>
 		</section>
 	</body>
 </html>
