--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -88,7 +88,7 @@
 					</ol>
 				</li>
 				<li>
-					<a href="text/appendix.xhtml">Jetan, or Martian Chess</a>
+					<a href="text/appendix.xhtml"><span xml:lang="x-mars">Jetan</span>, or Martian Chess</a>
 				</li>
 				<li>
 					<a href="text/endnotes.xhtml">Endnotes</a>
