semanticate - change italics with xml:lang on additional capitalized 'martian' words to span

--- a/src/epub/text/appendix.xhtml
+++ b/src/epub/text/appendix.xhtml
@@ -8,7 +8,7 @@
 	<body epub:type="backmatter z3998:fiction">
 		<section id="appendix" epub:type="appendix">
 			<h2 epub:type="title"><span xml:lang="x-mars">Jetan</span>, or Martian Chess</h2>
-			<p>For those who care for such things, and would like to try the game, I give the rules of <i xml:lang="x-mars">Jetan</i> as they were given me by John Carter. By writing the names and moves of the various pieces on bits of paper and pasting them on ordinary checkermen the game may be played quite as well as with the ornate pieces used upon Mars.</p>
+			<p>For those who care for such things, and would like to try the game, I give the rules of <span xml:lang="x-mars">Jetan</span> as they were given me by John Carter. By writing the names and moves of the various pieces on bits of paper and pasting them on ordinary checkermen the game may be played quite as well as with the ornate pieces used upon Mars.</p>
 			<hr/>
 			<p><i><b>The Board</b></i>: Square board consisting of one hundred alternate black and orange squares.</p>
 			<p><i><b>The Pieces</b></i>: In order, as they stand upon the board in the first row, from left to right of each player.</p>
@@ -32,9 +32,9 @@
 			<p>The Princess may not move onto a threatened square, nor may she take an opposing piece. She is entitled to one ten-space move at any time during the game. This move is called <em>the escape</em>.</p>
 			<p>Two pieces may not occupy the same square except in the final move of a game where the Princess is taken.</p>
 			<p>When a player, moving properly and in order, places one of his pieces upon a square occupied by an opponent piece, the opponent piece is considered to have been killed and is removed from the game.</p>
-			<p>The moves explained. Straight moves mean due north, south, east, or west; diagonal moves mean northeast, southeast, southwest, or northwest. A <i xml:lang="x-mars">Dwar</i> might move straight north three spaces, or north one space and east two spaces, or any similar combination of straight moves, so long as he did not cross the same square twice in a single move. This example explains combination moves.</p>
+			<p>The moves explained. Straight moves mean due north, south, east, or west; diagonal moves mean northeast, southeast, southwest, or northwest. A <span xml:lang="x-mars">Dwar</span> might move straight north three spaces, or north one space and east two spaces, or any similar combination of straight moves, so long as he did not cross the same square twice in a single move. This example explains combination moves.</p>
 			<p>The first move may be decided in any way that is agreeable to both players; after the first game the winner of the preceding game moves first if he chooses, or may instruct his opponent to make the first move.</p>
-			<p>Gambling: The Martians gamble at <i xml:lang="x-mars">Jetan</i> in several ways. Of course the outcome of the game indicates to whom the main stake belongs; but they also put a price upon the head of each piece, according to its value, and for each piece that a player loses he pays its value to his opponent.</p>
+			<p>Gambling: The Martians gamble at <span xml:lang="x-mars">Jetan</span> in several ways. Of course the outcome of the game indicates to whom the main stake belongs; but they also put a price upon the head of each piece, according to its value, and for each piece that a player loses he pays its value to his opponent.</p>
 		</section>
 	</body>
 </html>
