Proofreading: fix colon location in appendix

--- a/src/epub/text/appendix.xhtml
+++ b/src/epub/text/appendix.xhtml
@@ -24,7 +24,7 @@
 			<p><i>Warrior</i>: See above.</p>
 			<p>And in the second row from left to right:</p>
 			<p><i xml:lang="x-mars">Thoat</i>: Mounted warrior two feathers; two spaces, one straight and one diagonal in any direction.</p>
-			<p><i xml:lang="x-mars">Panthans</i>: (Eight of them): one feather; one space, forward, side, or diagonal, but not backward.</p>
+			<p><i xml:lang="x-mars">Panthans</i> (Eight of them): one feather; one space, forward, side, or diagonal, but not backward.</p>
 			<p><i xml:lang="x-mars">Thoat</i>: See above.</p>
 			<p>The game is played with twenty black pieces by one player and twenty orange by his opponent, and is presumed to have originally represented a battle between the Black race of the south and the Yellow race of the north. On Mars the board is usually arranged so that the Black pieces are played from the south and the Orange from the north.</p>
 			<p>The game is won when any piece is placed on same square with opponent’s Princess, or a Chief takes a Chief.</p>
