--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -19,7 +19,7 @@
 					<p>Approximately 814 Earth Miles. <a href="chapter-11.xhtml#noteref-3" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-4" epub:type="endnote">
-					<p>Those who have read John Carter’s description of the Green Martians in A Princess of Mars will recall that these strange people could exist for considerable periods of time without food or water, and to a lesser degree is the same true of all Martians. <a href="chapter-18.xhtml#noteref-4" epub:type="backlink">↩</a></p>
+					<p>Those who have read John Carter’s description of the Green Martians in <i epub:type="se:name.publication.book">A Princess of Mars</i> will recall that these strange people could exist for considerable periods of time without food or water, and to a lesser degree is the same true of all Martians. <a href="chapter-18.xhtml#noteref-4" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-5" epub:type="endnote">
 					<p>About 8:30 <abbr class="time">p.m.</abbr> Earth Time. <a href="chapter-20.xhtml#noteref-5" epub:type="backlink">↩</a></p>
