--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -10,7 +10,7 @@
 			<h2 epub:type="title">Endnotes</h2>
 			<ol>
 				<li id="note-1" epub:type="endnote">
-					<p>I have used the word <em>king</em> in describing the rulers or chiefs of the Bantoomian swarms, since the word itself is unpronounceable in English, nor does <em xml:lang="x-mars">jed</em> or <em xml:lang="x-mars">jeddak</em> of the red Martian tongue have quite the same meaning as the Bantoomian word, which has practically the same significance as the English word <em>queen</em> as applied to the leader of a swarm of bees. <cite>—<abbr class="name">J. C.</abbr></cite> <a href="chapter-8.xhtml#noteref-1" epub:type="backlink">↩</a></p>
+					<p>I have used the word “king” in describing the rulers or chiefs of the Bantoomian swarms, since the word itself is unpronounceable in English, nor does <i xml:lang="x-mars">jed</i> or <i xml:lang="x-mars">jeddak</i> of the red Martian tongue have quite the same meaning as the Bantoomian word, which has practically the same significance as the English word “queen” as applied to the leader of a swarm of bees. <cite>—<abbr class="name">J. C.</abbr></cite> <a href="chapter-8.xhtml#noteref-1" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-2" epub:type="endnote">
 					<p>Soldier of Fortune; freelance warrior. <a href="chapter-8.xhtml#noteref-2" epub:type="backlink">↩</a></p>
