Rename halftitle.xhtml -> halftitlepage.xhtml

--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -17,7 +17,7 @@
 					<a href="text/prelude.xhtml">Prelude</a>
 				</li>
 				<li>
-					<a href="text/halftitle.xhtml">The Chessmen of Mars</a>
+					<a href="text/halftitlepage.xhtml">The Chessmen of Mars</a>
 					<ol>
 						<li>
 							<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: Tara in a Tantrum</a>
@@ -114,7 +114,7 @@
 					<a href="text/prelude.xhtml" epub:type="frontmatter prologue">Prelude</a>
 				</li>
 				<li>
-					<a href="text/halftitle.xhtml" epub:type="frontmatter halftitlepage">Half Title</a>
+					<a href="text/halftitlepage.xhtml" epub:type="frontmatter halftitlepage">Half Title</a>
 				</li>
 				<li>
 					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">The Chessmen of Mars</a>
