--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -19,7 +19,7 @@
 			by<br/>
 			An Anonymous Volunteer,<br/>
 			and is based on a transcription produced in 1998 by<br/>
-			<b class="name">Judy Boss</b><br/>
+			<b epub:type="z3998:personal-name">Judy Boss</b><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/1153">Project Gutenberg</a><br/>
 			and on digital scans available at the<br/>
