--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -22,10 +22,10 @@
 					<p>Those who have read John Carter’s description of the Green Martians in <i epub:type="se:name.publication.book">A Princess of Mars</i> will recall that these strange people could exist for considerable periods of time without food or water, and to a lesser degree is the same true of all Martians. <a href="chapter-18.xhtml#noteref-4" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-5" epub:type="endnote">
-					<p>About 8:30 <abbr class="time">p.m.</abbr> Earth Time. <a href="chapter-20.xhtml#noteref-5" epub:type="backlink">↩</a></p>
+					<p>About 8:30 <abbr>p.m.</abbr> Earth Time. <a href="chapter-20.xhtml#noteref-5" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-6" epub:type="endnote">
-					<p>About 1:00 <abbr class="time">a.m.</abbr> Earth Time. <a href="chapter-21.xhtml#noteref-6" epub:type="backlink">↩</a></p>
+					<p>About 1:00 <abbr>a.m.</abbr> Earth Time. <a href="chapter-21.xhtml#noteref-6" epub:type="backlink">↩</a></p>
 				</li>
 			</ol>
 		</section>
