--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -23,7 +23,7 @@
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/1153">Project Gutenberg</a><br/>
 			and on digital scans available at the<br/>
-			<a href="https://archive.org/details/chessmenofmars00burr_2">Internet Archive</a></p>
+			<a href="https://archive.org/details/chessmenofmars00burr_2">Internet Archive</a>.</p>
 			<p>The cover page is adapted from<br/>
 			<i epub:type="se:name.visual-art.painting">The Chessmen of Mars</i>,<br/>
 			a painting completed in 1922 by<br/>
