Update <hgroup> children after first <h#> to <p>, ref. new HTML standard

--- a/src/epub/text/prelude.xhtml
+++ b/src/epub/text/prelude.xhtml
@@ -9,7 +9,7 @@
 		<section id="prelude" epub:type="prologue">
 			<hgroup>
 				<h2 epub:type="title">Prelude</h2>
-				<h3 epub:type="subtitle">John Carter Comes to Earth</h3>
+				<p epub:type="subtitle">John Carter Comes to Earth</p>
 			</hgroup>
 			<p>Shea had just beaten me at chess, as usual, and, also as usual, I had gleaned what questionable satisfaction I might by twitting him with this indication of failing mentality by calling his attention for the <i>n</i>th time to that theory, propounded by certain scientists, which is based upon the assertion that phenomenal chess players are always found to be from the ranks of children under twelve, adults over seventy-two or the mentally defective⁠—a theory that is lightly ignored upon those rare occasions that I win. Shea had gone to bed and I should have followed suit, for we are always in the saddle here before sunrise; but instead I sat there before the chess table in the library, idly blowing smoke at the dishonored head of my defeated king.</p>
 			<p>While thus profitably employed I heard the east door of the living-room open and someone enter. I thought it was Shea returning to speak with me on some matter of tomorrow’s work; but when I raised my eyes to the doorway that connects the two rooms I saw framed there the figure of a bronzed giant, his otherwise naked body trapped with a jewel-encrusted harness from which there hung at one side an ornate short-sword and at the other a pistol of strange pattern. The black hair, the steel-gray eyes, brave and smiling, the noble features⁠—I recognized them at once, and leaping to my feet I advanced with outstretched hand.</p>
