--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -15,7 +15,7 @@
 			was published in 1922 by<br/>
 			<a href="https://en.wikipedia.org/wiki/Edgar_Rice_Burroughs">Edgar Rice Burroughs</a>.</p>
 			<p>This ebook was produced for<br/>
-			<a href="https://standardebooks.org">Standard Ebooks</a><br/>
+			<a href="https://standardebooks.org/">Standard Ebooks</a><br/>
 			by<br/>
 			An Anonymous Volunteer,<br/>
 			and is based on a transcription produced in 1998 by<br/>
@@ -31,12 +31,12 @@
 			The cover and title pages feature the<br/>
 			<b epub:type="se:name.visual-art.typeface">League Spartan</b> and <b epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</b><br/>
 			typefaces created in 2014 and 2009 by<br/>
-			<a href="https://www.theleagueofmoveabletype.com">The League of Moveable Type</a>.</p>
+			<a href="https://www.theleagueofmoveabletype.com/">The League of Moveable Type</a>.</p>
 			<p>The first edition of this ebook was released on<br/>
 			<b>March 23, 2021, 10:39 <abbr class="eoc">p.m.</abbr></b><br/>
 			You can check for updates to this ebook, view its revision history, or download it for different ereading systems at<br/>
 			<a href="https://standardebooks.org/ebooks/edgar-rice-burroughs/the-chessmen-of-mars">standardebooks.org/ebooks/edgar-rice-burroughs/the-chessmen-of-mars</a>.</p>
-			<p>The volunteer-driven Standard Ebooks project relies on readers like you to submit typos, corrections, and other improvements. Anyone can contribute at <a href="https://standardebooks.org">standardebooks.org</a>.</p>
+			<p>The volunteer-driven Standard Ebooks project relies on readers like you to submit typos, corrections, and other improvements. Anyone can contribute at <a href="https://standardebooks.org/">standardebooks.org</a>.</p>
 		</section>
 	</body>
 </html>
